--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 version: "2.15.1"
 services:
 
-  posfix:
-    name: 'rabit-postfix'
-    image: boky/postfix
+  postfix:
+   name: 'rabit-postfix'
+   image: boky/postfix
     
   postgres:
     image: postgres:13.3
@@ -14,15 +14,14 @@ services:
     ports:
       - "5432:5432"
     volume:
-      - /home/valeria/projects/databases/habits:/var/lib/postgresql/data
-  
-  rabbit:
-    image: rabbitmq:3.10.7-management
-      hostname: rabbitmq
-      restart: always
+      - "C:\\habbits_data:/var/lib/postgresql/data"
+
+    rabbitmq:
+      image: rabbitmq:3.10.7-management
+      hostname: "rabbitmq"
+      restart: "always"
       environment:
-        - RABBITMQ_DEFAULT_USER: "rabbUser"
-        - RABBITMQ_DEFAULT_PASS: "rabbPassword"
-      ports:
-        - "15672:15672"
-  
+         RABBITMQ_DEFAULT_USER: "rmuser"
+         RABBITMQ_DEFAULT_PASS: "rmpassword"
+      ports: "15672:15672"
+
