--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,8 @@ version: "2.15.1"
 services:
 
   postfix:
-   name: 'rabit-postfix'
-   image: boky/postfix
+#    name: 'rabit-postfix'
+    image: boky/postfix
     
   postgres:
     image: postgres:13.3
@@ -12,16 +12,17 @@ services:
       POSTGRES_USER: "habrpguser"
       POSTGRES_PASSWORD: "pgpwd4habr"
     ports:
-      - "5432:5432"
-    volume:
-      - "C:\\habbits_data:/var/lib/postgresql/data"
+      - "5431:5432"
+#    volume:
+#      - "C:\\habbits_data:/var/lib/postgresql/data"
 
-    rabbitmq:
-      image: rabbitmq:3.10.7-management
-      hostname: "rabbitmq"
-      restart: "always"
-      environment:
-         RABBITMQ_DEFAULT_USER: "rmuser"
-         RABBITMQ_DEFAULT_PASS: "rmpassword"
-      ports: "15672:15672"
+  rabbitmq:
+    image: rabbitmq:3.10.7-management
+    hostname: "rabbitmq"
+    restart: "always"
+    environment:
+       RABBITMQ_DEFAULT_USER: "rmuser"
+       RABBITMQ_DEFAULT_PASS: "rmpassword"
+    ports:
+      - "15672:15672"
 
