--- a/habits/src/main/resources/application.properties
+++ b/habits/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.Sec
 
 spring.security.user.password=password
 
+spring.rabbitmq.addresses = localhost:5672
+server.port = 25
