--- a/email-service/src/main/resources/application.properties.properties
+++ b/email-service/src/main/resources/application.properties.properties
@@ -1,2 +1,5 @@
 server.port = 25
 spring.rabbitmq.addresses = localhost:5672
+rabbit.exchange=myrabbitmq.direct
+rabbit.routing=myrabbitmq.routingkey
+rabbit.queue=myrabbitmq.queue
