--- a/habits/src/main/resources/application.properties
+++ b/habits/src/main/resources/application.properties
@@ -14,3 +14,7 @@ spring.security.user.password=password
 
 spring.rabbitmq.addresses = localhost:5672
 server.port = 25
+
+rabbit.exchange=myrabbitmq.direct
+rabbit.routing=myrabbitmq.routingkey
+rabbit.queue=myrabbitmq.queue
